css/style.css
:root {
  --color-very-dark-megenta: hsl(300, 43%, 22%);
  --color-soft-pink: hsl(333, 80%, 67%);
  --color-dark-grayish-megenta: hsl(303, 10%, 53%);
  --color-light-grayish-megenta: hsl(300, 24%, 96%);
  --color-white: hsl(300, 24%, 96%);
}

html {
  font-size: 62.5%;
}

body {
  font-family: "Spartan", sans-serif;
  font-size: 1.5rem;
  margin: 0;
  height: 260vh;
}

/* ********************************************* */
/* Components */
/* *********************************************** */

/* Indentation */

.indent-small {
  margin-left: 0rem;
}

.indent-medium {
  margin-left: 00rem;
}

/* Review */

.review-container {
  width: 85%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 4rem;
}

.review {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--color-light-grayish-megenta);
  border-radius: 15px;
  margin-bottom: 2rem;
  padding: 0.3rem;
  max-width: 400px;
}

.review__star {
  margin-top: 1rem;
}

.review__star img {
  margin: 1px;
}

.review__title {
  font-weight: 700;
  color: var(--color-very-dark-megenta);
  margin: 1rem;
}

@media screen and (min-width: 1024px) {
  .review {
    flex-direction: row;
    width: 40%;
    font-size: 1.3rem;
    padding: 0.8rem 0 0.8rem 0.8rem;
  }
  .review__title {
    margin-left: 5rem;
  }
  .review-container .indent-small {
    margin-left: 10rem;
  }
  .review-container .indent-medium {
    margin-left: 20rem;
  }
  .review__star {
    margin-top: 0;
  }
}

/* Card */

.card-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-shrink: 1;
}

.card {
  width: 70%;
  max-width: 300px;
  background-color: var(--color-very-dark-megenta);
  color: var(--color-white);
  padding: 4rem 3.5rem 2rem;
  border-radius: 10px;
  margin-bottom: 2rem;
  flex-shrink: 1;
}

.card img {
  border-radius: 50%;
  height: 50px;
}

.card__head {
  display: flex;
  align-items: center;
}

.name {
  margin: 0 4rem 0.5rem;
  font-size: 1.5rem;
  font-weight: 600;
}

.tag {
  margin: 0 4rem;
  font-size: 1.4rem;
  font-weight: 400;
  color: hsl(333deg 40% 51%);
}

.double-quotes::before {
  content: open-quote;
}

.double-quotes::after {
  content: close-quote;
}

.card__body {
  line-height: 1.8;
  word-spacing: 2px;
  margin-top: 3rem;
  color: white;
}

@media screen and (min-width: 1024px) {
  .card-container {
    flex-direction: row;
    justify-content: center;
    height: 100vh;
  }

  .card {
    margin-right: 3rem;
    padding: 2rem 3rem 1rem;
    flex-shrink: 0;
    width: 250px;
  }

  .card__body {
    line-height: 1.6;
  }

  .card-container .indent-small {
    margin-top: 5rem;
  }

  .card-container .indent-medium {
    margin-top: 10rem;
  }
}

@media screen and (min-width: 1140px) {
  .card {
    width: 300px;
  }

  .card .indent-small {
    margin-top: 5rem;
  }

  .card .indent-medium {
    margin-top: 10rem;
  }
}

/* Main Heading */

.heading-container {
  margin-top: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 90%;
  width: 90%;
  line-height: 1;
  margin-bottom: 5rem;
}

.main-heading {
  text-align: center;
  color: var(--color-very-dark-megenta);
  font-size: 2.1rem;
  letter-spacing: -2px;
  word-spacing: 3px;
  flex-grow: 0;
  min-width: 300px;
  max-width: 360px;
}

.main-description {
  margin: 0;
  text-align: center;
  color: rgb(119, 115, 115);
  line-height: 1.8;
  font-size: 1.7rem;
  max-width: 500px;
  min-width: 310px;
}

@media screen and (min-width: 1024px) {
  .heading-container {
    align-items: flex-start;
  }
  .main-heading {
    text-align: left;
  }
  .main-description {
    text-align: left;
    width: 550px;
  }
}

/* Arraging Components */
.body-container {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  align-items: center;
  background-repeat: no-repeat;
  margin-bottom: 5rem;
}

@media screen and (min-width: 1024px) {
  .body {
    height: fit-content;
  }
  .body-container {
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
    height: 100%;
    margin-bottom: 0;
  }
  .heading-container {
    height: 50%;
    width: 70%;
    margin: 0;
  }
  .review-container {
    width: 80vw;
    margin-top: 3%;
    align-items: flex-start;
  }

  .review {
    width: 90%;
    max-width: 450px;
  }

  .body-flex {
    background-image: url(../images/bg-pattern-top-desktop.svg),
      url(../images/bg-pattern-bottom-desktop.svg);
    background-position: top left, bottom right;
    background-repeat: no-repeat;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    padding: 5rem;
    height: 100vh;
    flex-direction: column;
    margin: 2rem 0;
  }

  .card-container {
    width: 100%;
    margin: 0 auto;
  }
}

/* Desigin for tablet */

@media screen and (min-width:600px) {
  .heading-container{
    margin-bottom: 2rem;
  }
}

